...
                shader = shader,
                onClick = onDismiss,
                modifier = Modifier.widthIn(max = maxPreviewWidth),
            )

            Text(
                text = "Tap to close",
                style = SpTypography.BodySmall,
                color = SpColor.OnBackgroundTertiary,
                modifier = Modifier
                    .align(Alignment.BottomCenter)
                    .padding(bottom = SpSpacing.XLarge),
            )
...
